--- a/data/vaccines.yaml
+++ b/data/vaccines.yaml
@@ -2,7 +2,8 @@ vaccines:
   - name: Adacel
     type: Tdap
     url: https://www.fda.gov/vaccines-blood-biologics/vaccines/adacel
-    age_range: "10 - 64 years "
+    age_range: "10 - 64 years"
+    initial_US_approval_date: "2005"
     ingredients:
       - aluminum: "330 mcg"
       - ammonium_sulfate: "1 exposure"
@@ -16,6 +17,7 @@ vaccines:
     type: Vitamin-K
     url: https://www.accessdata.fda.gov/drugsatfda_docs/label/2018/012223s042lbl.pdf
     age_range: "Birth and older"
+    initial_US_approval_date: "1961"
     ingredients:
       - benzyl_alcohol: "9,000 mcg"
       - phytonadione: "2 mg"
@@ -23,6 +25,7 @@ vaccines:
     type: MenB
     url: https://www.fda.gov/vaccines-blood-biologics/vaccines/bexsero
     age_range: "10 - 25 years"
+    initial_US_approval_date: "2015"
     ingredients:
       - aluminum: "519 mcg"
       - deoxycholate: "1 exposure"
@@ -33,6 +36,7 @@ vaccines:
     type: Tdap
     url: https://www.fda.gov/vaccines-blood-biologics/vaccines/boostrix
     age_range: "10 years and older"
+    initial_US_approval_date: "2005"
     ingredients:
       - aluminum: "390 mcg"
       - bovine_pituitary_extract: "1 exposure"
@@ -46,6 +50,7 @@ vaccines:
     type: DTaP
     url: https://www.fda.gov/vaccines-blood-biologics/vaccines/daptacel
     age_range: "6 weeks - 6 years"
+    initial_US_approval_date: "2002"
     ingredients:
       - aluminum: "330 mcg"
       - ammonium_sulfate: "1 exposure"
@@ -58,6 +63,7 @@ vaccines:
     type: DTaP
     url: https://www.fda.gov/vaccines-blood-biologics/vaccines/infanrix
     age_range: "6 weeks - 6 years"
+    initial_US_approval_date: "1997"
     ingredients:
       - aluminum: "625 mcg"
       - bovine_pituitary_extract: "1 exposure"
@@ -67,10 +73,24 @@ vaccines:
       - latex: "1 exposure"
       - pertussis_toxin: "25 mcg"
       - polysorbate_80: "100 mcg"
+  - name: IPOL
+    type: Polio
+    url: https://www.fda.gov/vaccines-blood-biologics/vaccines/ipol-poliovirus-vaccine-inactivated-monkey-kidney-cell
+    age_range: "6 weeks and older"
+    initial_US_approval_date: "1987"
+    ingredients:
+      - calf_serum_albumin: "1 mcg"
+      - formaldehyde: "25 mcg"
+      - neomycin: "0.005 mcg"
+      - polymyxin: "25 ng"
+      - streptomycin: "200 ng"
+      - phenoxyethanol: "2,500 mcg"
+      - vero_cells: "1 exposure"
   - name: Menactra
     type: MenACWY
     url: https://www.fda.gov/vaccines-blood-biologics/vaccines/menactra
     age_range: "9 months - 55 years"
+    initial_US_approval_date: "2005"
     ingredients:
       - ammonium_sulfate: "1 exposure"
       - casein: "1 exposure"
@@ -81,24 +101,54 @@ vaccines:
     type: MenACWY
     url: https://www.fda.gov/vaccines-blood-biologics/vaccines/menveo
     age_range: "2 months - 55 years"
+    initial_US_approval_date: "2010"
     ingredients:
       - diphtheria_toxoid: "64 mcg"
       - formaldehyde: "0.3 mcg"
       - franz_complete_medium: "1 exposure"
       - yeast: "1 exposure"
+  - name: MMR-II
+    type: MMR
+    url: https://www.fda.gov/vaccines-blood-biologics/vaccines/measles-mumps-and-rubella-virus-vaccine-live
+    age_range: "12 months and older"
+    initial_US_approval_date: "1978"
+    ingredients:
+      - fetal_bovine_serum: "1,000 ng"
+      - egg_protein: "1 exposure"
+      - glyphosate: "3.2 ppb"
+      - human_protein_dna_wi_38: "1 exposure"
+      - human_protein_dna_wistar_ra_27_3: "1 exposure"
+      - msg: "1 exposure"
+      - neomycin: "25 mcg"
+      - porcine_gelatin: "14.5 mg"
+      - recombinant_human_albumin: "1 exposure"
   - name: Phytonadione generic
     type: Vitamin-K
     url: https://labeling.pfizer.com/ShowLabeling.aspx?id=5392
     age_range: "Birth and older"
+    initial_US_approval_date: "?"
     ingredients:
       - benzyl_alcohol: "9,000 mcg"
       - phytonadione: "1 mg"
       - polysorbate_80: "10,000 mcg"
       - proplyene_glycol: "10,400 mcg"
+  - name: PRIORIX
+    type: MMR
+    url: https://www.fda.gov/vaccines-blood-biologics/priorix
+    age_range: "12 months and older"
+    initial_US_approval_date: "2022"
+    ingredients:
+      - fetal_bovine_serum: "50 ng"
+      - egg_protein: "60 ng"
+      - human_protein_dna_wi_38: "1 exposure"
+      - human_protein_dna_wistar_ra_27_3: "1 exposure"
+      - latex: "1 exposure"
+      - neomycin: "25 mcg"
   - name: Trumenba
     type: MenB
     url: https://www.fda.gov/vaccines-blood-biologics/vaccines/trumenba
     age_range: "10 - 25 years"
+    initial_US_approval_date: "2014"
     ingredients:
       - aluminum: "250 mcg"
       - e_coli: "1 exposure"
